--- a/render.yaml
+++ b/render.yaml
@@ -37,7 +37,7 @@ services:
     name: spring-postgres-image
     runtime: image
     image:
-      url: https://hub.docker.com/r/imotszeged/test-boot:latest
+      url: https://hub.docker.com/r/imotszeged/test-boot
     region: frankfurt
     plan: free
     healthCheckPath: /
