--- a/render.yaml
+++ b/render.yaml
@@ -37,7 +37,7 @@ services:
     name: spring-postgres-image
     runtime: image
     image:
-      url: https://hub.docker.com/r/imotszeged/test-boot:4
+      url: imotszeged/test-boot:4
       creds:
         fromRegistryCreds:
           name: docker
