--- a/render.yaml
+++ b/render.yaml
@@ -37,7 +37,7 @@ services:
     name: spring-postgres-image
     runtime: image
     image:
-      url: imotszeged/test-boot:4
+      url: imotszeged/test-boot:latest
       creds:
         fromRegistryCreds:
           name: docker
